--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "~8.2.4",
     "@fortawesome/fontawesome-free": "^5.11.2",
     "bootstrap": "^4.3.1",
+    "moment": "^2.24.0",
+    "ngx-moment": "^3.4.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
