--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
     "@fortawesome/fontawesome-free": "^5.11.2",
+    "@ngx-progressbar/core": "^5.3.2",
+    "@ngx-progressbar/http": "^5.3.2",
     "bootstrap": "^4.3.1",
     "moment": "^2.24.0",
     "ngx-moment": "^3.4.0",
